@@ -2476,12 +2476,9 @@ void CClient::Event_ExtCmd(EXTCMD_TYPE type, TCHAR *pszArgs)
 	}
 
 	TCHAR *ppArgs[2];
-	Str_ParseCmds(pszArgs, ppArgs, COUNTOF(ppArgs), " ");
-
-	if (!ppArgs[0] && type != EXTCMD_OpenDoor) {
-		DEBUG_ERR(("%lx:Invalid ExtCmd packet\n", GetSocketID()));
+	size_t iArgQty = Str_ParseCmds(pszArgs, ppArgs, COUNTOF(ppArgs), " ");
+	if ( (iArgQty < 1) && (type != EXTCMD_OpenDoor) )
 		return;
-	}
 
 	switch ( type )
 	{
